[project]
name = "google-timeline-analyzer"
version = "0.1.0"
description = "Analyze and map trips from Google Timeline export with Places API enrichment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0",
    "googlemaps>=4.10.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
    "geopy>=2.4.0",
    "redis>=5.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]
visualization = [
    "folium>=0.15.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
